[package]
name = "linar"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql" ] }
serde_json = {}
redis = { version = "0.22.2", features = ["tokio-comp"] }
tower-http = { version = "0.3.5", features = ["full"] }
tower = { version = "0.4", features = ["full"] }