[package]
name = "linar"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
sha2 = "0.10.8"
num = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.6"
structopt = "0.3"
bs58 = "0.5.0"
secp256k1 ={ version = "0.28.0",features = ["rand-std"] }
ripemd = "0.1.3"
rand = "0.8"
halo2_gadgets = "0.3.0"
ecies = "0.2.6"