[package]
name = "linar"
version = "0.1.0"
edition = "2021"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters", "plotters/bitmap_backend", "plotters/bitmap_encoder"]

[dependencies]
hex = "0.4"
sha2 = "0.10.8"
num = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.6"
structopt = "0.3"
bs58 = "0.5.0"
secp256k1 ={ version = "0.28.0",features = ["rand-std"] }
ripemd = "0.1.3"
rand = "0.8"
halo2_gadgets = { version = "0.3.0",features = ["unstable-sha256-gadget"] }
ecies = "0.2.6"
halo2_proofs = "0.3.0"
plotters = { version = "0.3.0", default-features = true, optional = true }
pasta_curves = "0.5"
orchard = "0.6.0"
bridgetree = "0.4"
lazy_static = "1.4"
zcash_note_encryption = "0.4"
